vlib/v/checker/tests/c_binding_confusable_c_err.vv
fn С.destroy_context(context u32)

pub fn destroy_context(context u32) {
	C.destroy_context(context)
}

